force-app/main/default/objects/Log__e/fields/log_message__c.field-meta.xml
<CustomField>
    <fullName>log_message__c</fullName>
    <label>log_message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>