force-app/main/default/objects/Log__e/fields/quiddity__c.field-meta.xml
<CustomField>
    <fullName>quiddity__c</fullName>
    <label>quiddity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>