force-app/main/default/objects/Log__e/fields/request_id__c.field-meta.xml
<CustomField>
    <fullName>request_id__c</fullName>
    <label>request_id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>